--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Control Remoto</string>
+    <string name="title_activity_settings">Configuracion de botones</string>
+    <string name="messages_header">Toque una opcion para establecer una URL</string>
 </resources>
